# exercicio-curso-fastapi-do-zero-madr

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json  pgadmin-servers.json
.github/workflows/: check-commit.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  config.yaml  deployment.yaml  ingress.yaml  service.yaml  volume.yaml
migrations/: env.py
migrations/versions/: 202408181706_0a650af4fb22_cria_tabela_users.py  202408200038_643dd8d47c7f_cria_tabela_romancistas.py  202408202333_162480cc01d7_cria_tabela_livros.py
scripts/: deploy-in-k8s.sh  run-with-migrate.sh  setup-devcontainer.sh
src/madr/: api.py  database.py  errors.py  models.py  schemas.py  security.py  settings.py  utils.py
src/madr/routers/: auth.py  conta.py  livro.py  romancista.py
tests/: conftest.py  factories.py  utils.py
tests/madr/: test_api.py  test_database.py  test_errors.py  test_models.py  test_security.py  test_utils.py
tests/madr/routers/: test_auth.py  test_conta.py  test_livro.py  test_romancista.py
