[build-system]
requires = ["poetry-core>=1,<2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "madr"
version = "0.0.0"
description = "Projeto Final do FastAPI do Zero - Meu Acervo Digital de Romances"
authors = ["Eduardo Klosowski <eduardo_klosowski@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
mypy = "^1.11.2"

[tool.ruff]
target-version = "py312"
line-length = 119
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S311"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
sqlite_cache = true
plugins = []
files = ["src/**/*.py", "tests/**/*.py"]
