[build-system]
requires = ["poetry-core>=1,<2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "madr"
version = "0.0.0"
description = "Projeto Final do FastAPI do Zero - Meu Acervo Digital de Romances"
authors = ["Eduardo Klosowski <eduardo_klosowski@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
alembic = "^1.13.2"
fastapi = "^0.112.2"
psycopg = {version = "^3.2.1", extras = ["binary"]}
pwdlib = {version = "^0.2.1", extras = ["argon2"]}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
fastapi = {version = "*", extras = ["standard"]}
ruff = "^0.6.2"
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.1"
faker = "^28.0.0"
freezegun = "^1.5.1"
httpx = "^0.27.0"

[tool.ruff]
target-version = "py312"
line-length = 119
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"migrations/*.py" = ["INP001"]
"tests/*.py" = ["S101", "S311", "ARG001", "ARG002"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
sqlite_cache = true
plugins = ["pydantic.mypy"]
files = ["src/**/*.py", "tests/**/*.py"]

[[tool.mypy.overrides]]
module = [
  "factory.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if (typing\\.)?TYPE_CHECKING:",
  "@abstractmethod",
  "@overload",
]
